--- a/src/SvgBlazor.Docs/Shared/NavMenu.razor
+++ b/src/SvgBlazor.Docs/Shared/NavMenu.razor
@@ -12,6 +12,11 @@
                 <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="/elements/circle" Match="NavLinkMatch.All">
+                <span class="oi oi-home" aria-hidden="true"></span> Circle
+            </NavLink>
+        </li>
     </ul>
 </div>
 
