--- a/src/SvgBlazor.Docs/Pages/Elements/Circle/CirclePage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Circle/CirclePage.razor
@@ -1,5 +1,5 @@
 ﻿@page "/elements/circle"
 
-<SvgBlazor.Elements.Svg Width="200" Height="200">
-    <SvgBlazor.Docs.Examples.CircleExample />
-</SvgBlazor.Elements.Svg>
+<Svg Width="200" Height="200">
+    <CircleExample />
+</Svg>
