--- a/src/SvgBlazor.Docs/_Imports.razor
+++ b/src/SvgBlazor.Docs/_Imports.razor
@@ -6,5 +6,7 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
+@using SvgBlazor
 @using SvgBlazor.Docs
+@using SvgBlazor.Docs.Examples
 @using SvgBlazor.Docs.Shared
