--- a/src/SvgBlazor/Elements/SvgCircle.razor
+++ b/src/SvgBlazor/Elements/SvgCircle.razor
@@ -1,4 +1,9 @@
 ﻿@namespace SvgBlazor
 @inherits SvgElementBase
 
-<circle id="@Id" class="@Class" style="@Style" cx="@CenterX" cy="@CenterY" r="@Radius" />
+<circle id="@Id"
+        class="@Class"
+        style="@Style"
+        cx="@CenterX"
+        cy="@CenterY"
+        r="@Radius" />
