--- a/src/SvgBlazor.Docs/Shared/NavMenu.razor
+++ b/src/SvgBlazor.Docs/Shared/NavMenu.razor
@@ -17,6 +17,13 @@
                 <span class="oi oi-home" aria-hidden="true"></span> Circle
             </NavLink>
         </li>
+
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="/elements/line" Match="NavLinkMatch.All">
+                <span class="oi oi-home" aria-hidden="true"></span> Line
+            </NavLink>
+        </li>
+
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="/elements/rect" Match="NavLinkMatch.All">
                 <span class="oi oi-home" aria-hidden="true"></span> Rect
