--- a/src/SvgBlazor/Elements/SvgCircle.razor
+++ b/src/SvgBlazor/Elements/SvgCircle.razor
@@ -6,4 +6,5 @@
         style="@Style"
         cx="@CenterX"
         cy="@CenterY"
-        r="@Radius" />
+        r="@Radius"
+        @onclick="OnClick" />
