--- a/src/SvgBlazor/Elements/SvgText.razor
+++ b/src/SvgBlazor/Elements/SvgText.razor
@@ -5,6 +5,7 @@
       class="@Class"
       style="@Style"
       x="@X"
-      y="@Y">
+      y="@Y"
+      @onclick="OnClick" >
     @ChildContent
 </text>
