--- a/src/SvgBlazor.Docs/Shared/NavMenu.razor
+++ b/src/SvgBlazor.Docs/Shared/NavMenu.razor
@@ -25,6 +25,12 @@
         </li>
 
         <li class="nav-item px-3">
+            <NavLink class="nav-link" href="/elements/polygon" Match="NavLinkMatch.All">
+                <span class="oi oi-home" aria-hidden="true"></span> Polygon
+            </NavLink>
+        </li>
+
+        <li class="nav-item px-3">
             <NavLink class="nav-link" href="/elements/rect" Match="NavLinkMatch.All">
                 <span class="oi oi-home" aria-hidden="true"></span> Rect
             </NavLink>
