--- a/src/SvgBlazor.Docs/Pages/Elements/Svg/Examples/SvgExample.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Svg/Examples/SvgExample.razor
@@ -1,20 +1,35 @@
 ﻿@namespace SvgBlazor.Docs.Examples
 
-<Svg @ref="svgref" Width="500" Height="500" OnClick="OnSvgClicked" />
+<SvgComponent @ref="svgref" Width="500" Height="500" OnClick="OnSvgClicked" />
 
 <button @onclick="OnAddCircle">Add circle</button>
 
 @code {
-    Svg svgref;
+    SvgComponent svgref;
 
     private void OnAddCircle()
     {
-        var c = new SvgCircle()
+        SvgElement c;
+
+        if (new Random().Next(0,2)==0)
         {
-            CenterX = new Random().Next(25, 475),
-            CenterY = new Random().Next(25, 475),
-            Radius = new Random().Next(10, 25),
-        };
+            c = new SvgCircle()
+            {
+                CenterX = new Random().Next(25, 475),
+                CenterY = new Random().Next(25, 475),
+                Radius = new Random().Next(10, 25)
+            };
+        }
+        else
+        {
+            c = new SvgLine()
+            {
+                X1 = new Random().Next(0, 200),
+                Y1 = new Random().Next(0, 200),
+                X2 = new Random().Next(0, 200),
+                Y2 = new Random().Next(0, 200)
+            };
+        }
 
         c.OnClick = EventCallback.Factory.Create<MouseEventArgs>(this, args =>
         {
@@ -22,7 +37,10 @@
             svgref.Remove(c);
         });
 
-        svgref.Add(c);
+        SvgContainer g = new SvgG();
+        g.Add(c);
+        
+        svgref.Add(g);
     }
 
     private void OnSvgClicked(MouseEventArgs args)
