--- a/src/SvgBlazor.Docs/Pages/Elements/Line/Examples/LineExample.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Line/Examples/LineExample.razor
@@ -1,3 +1,23 @@
 ﻿@namespace SvgBlazor.Docs.Examples
 
-<SvgLine X1="20" Y1="20" X2="180" Y2="180" stroke="black" />
+<SvgComponent @ref="svg" Width="200" Height="200" />
+
+@code {
+    SvgComponent svg;
+
+    protected override void OnAfterRender(bool firstRender)
+    {
+        if (firstRender)
+        {
+            var line = new SvgLine()
+            {
+                X1 = new Random().Next(0, 200),
+                Y1 = new Random().Next(0, 200),
+                X2 = new Random().Next(0, 200),
+                Y2 = new Random().Next(0, 200)
+            };
+            svg.Add(line);
+            StateHasChanged();
+        }
+    }
+}
