--- a/src/SvgBlazor.Docs/Pages/Elements/Circle/CirclePage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Circle/CirclePage.razor
@@ -1,3 +1,4 @@
 ﻿@page "/elements/circle"
+@using SvgBlazor.Docs.Components
 
-<CircleExample />
+<ExampleComponent ExampleCode="@(new CircleExample())" />
