--- a/src/SvgBlazor.Docs/Pages/Elements/G/GPage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/G/GPage.razor
@@ -1,5 +1,4 @@
 ﻿@page "/elements/g"
+@using SvgBlazor.Docs.Components
 
-<Svg Width="200" Height="200">
-    <GExample />
-</Svg>
+<ExampleComponent ExampleCode="@(new GExample())" />
