--- a/src/SvgBlazor.Docs/Pages/Elements/Line/LinePage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Line/LinePage.razor
@@ -1,3 +1,4 @@
 ﻿@page "/elements/line"
+@using SvgBlazor.Docs.Components
 
-<LineExample />
+<ExampleComponent ExampleCode="@(new LineExample())" />
