--- a/src/SvgBlazor.Docs/Pages/Elements/Rect/RectPage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Rect/RectPage.razor
@@ -1,5 +1,4 @@
 ﻿@page "/elements/rect"
+@using SvgBlazor.Docs.Components
 
-<Svg Width="200" Height="200">
-    <RectExample />
-</Svg>
+<ExampleComponent ExampleCode="@(new RectExample())" />
