--- a/src/SvgBlazor.Docs/Pages/Elements/Text/TextPage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Text/TextPage.razor
@@ -1,5 +1,4 @@
 ﻿@page "/elements/text"
+@using SvgBlazor.Docs.Components
 
-<Svg Width="200" Height="200">
-    <TextExample />
-</Svg>
+<ExampleComponent ExampleCode="@(new TextExample())" />
