--- a/src/SvgBlazor.Docs/Pages/Elements/Svg/SvgPage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Svg/SvgPage.razor
@@ -1,3 +1,62 @@
 ﻿@page "/elements/svg"
 
-<SvgExample />
+<SvgComponent @ref="svgref" Width="500" Height="500" OnClick="OnSvgClicked" />
+
+<button @onclick="OnAddElement">Add random element</button>
+<p>Click an element to remove</p>
+
+@code {
+    SvgComponent svgref;
+
+    private void OnAddElement()
+    {
+        SvgElement c;
+
+        var id = new Random().Next(0, 3);
+        switch (id)
+        {
+            case 0:
+                c = new SvgCircle()
+                {
+                    CenterX = new Random().Next(25, 475),
+                    CenterY = new Random().Next(25, 475),
+                    Radius = new Random().Next(10, 25)
+                };
+                break;
+            case 1:
+                c = new SvgLine()
+                {
+                    X1 = new Random().Next(0, 200),
+                    Y1 = new Random().Next(0, 200),
+                    X2 = new Random().Next(0, 200),
+                    Y2 = new Random().Next(0, 200)
+                };
+                break;
+            default:
+                c = new SvgText()
+                {
+                    X = new Random().Next(25, 475),
+                    Y = new Random().Next(25, 475),
+                    Text = "Test"
+                };
+                break;
+        }
+
+        SvgContainer g = new SvgG();
+
+        c.OnClick = EventCallback.Factory.Create<MouseEventArgs>(this, args =>
+        {
+            Console.WriteLine("Element clicked " + c.Tag());
+            g.Remove(c);
+            StateHasChanged();
+        });
+
+        g.Add(c);
+        svgref.Add(g);
+    }
+
+    private void OnSvgClicked(MouseEventArgs args)
+    {
+        Console.WriteLine("Svg clicked");
+    }
+}
