Causes an error "the render handle is not yet assigned"

--- a/src/SvgBlazor.Docs/Pages/Elements/Svg/Examples/SvgExample.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Svg/Examples/SvgExample.razor
@@ -22,7 +22,9 @@
             svgref.Remove(c);
         });
 
-        svgref.Add(c);
+        var g = new SvgG();
+        g.Add(c);
+        svgref.Add(g);
     }
 
     private void OnSvgClicked(MouseEventArgs args)
