Redesign for dynamic elements (#44)

--- a/src/SvgBlazor.Docs/Pages/Elements/Circle/CirclePage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Circle/CirclePage.razor
@@ -1,5 +1,4 @@
 ﻿@page "/elements/circle"
+@using SvgBlazor.Docs.Components
 
-<Svg Width="200" Height="200">
-    <CircleExample />
-</Svg>
+<ExampleComponent ExampleCode="@(new CircleExample())" />
