--- a/src/SvgBlazor.Docs/Pages/Elements/Line/LinePage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Line/LinePage.razor
@@ -1,5 +1,4 @@
 ﻿@page "/elements/line"
+@using SvgBlazor.Docs.Components
 
-<Svg Width="200" Height="200">
-    <LineExample />
-</Svg>
+<ExampleComponent ExampleCode="@(new LineExample())" />
