Update polygons to dynamic elements

--- a/src/SvgBlazor.Docs/Pages/Elements/Polygon/PolygonPage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Polygon/PolygonPage.razor
@@ -1,5 +1,4 @@
 ﻿@page "/elements/polygon"
+@using SvgBlazor.Docs.Components
 
-<Svg Width="200" Height="200">
-    <PolygonExample />
-</Svg>
+<ExampleComponent ExampleCode="@(new PolygonExample())" />
