--- a/src/SvgBlazor.Docs/Pages/Elements/Svg/SvgPage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Svg/SvgPage.razor
@@ -44,12 +44,11 @@
 
         SvgContainer g = new SvgG();
 
-        c.OnClick = EventCallback.Factory.Create<MouseEventArgs>(this, args =>
+        c.OnClick = (MouseEventArgs args) =>
         {
             Console.WriteLine("Element clicked " + c.Tag());
             g.Remove(c);
-            StateHasChanged();
-        });
+        };
 
         g.Add(c);
         svgref.Add(g);
