--- a/src/SvgBlazor.Docs/Shared/NavMenu.razor
+++ b/src/SvgBlazor.Docs/Shared/NavMenu.razor
@@ -26,6 +26,12 @@
         </li>
 
         <li class="nav-item px-3">
+            <NavLink class="nav-link" href="/elements/ellipse" Match="NavLinkMatch.All">
+                <span class="oi oi-home" aria-hidden="true"></span> Ellipse
+            </NavLink>
+        </li>
+
+        <li class="nav-item px-3">
             <NavLink class="nav-link" href="/elements/line" Match="NavLinkMatch.All">
                 <span class="oi oi-home" aria-hidden="true"></span> Line
             </NavLink>
