--- a/src/SvgBlazor.Docs/Pages/Elements/Svg/SvgPage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Svg/SvgPage.razor
@@ -44,7 +44,7 @@
 
         SvgContainer g = new SvgG();
 
-        c.OnClick = (MouseEventArgs args) =>
+        c.OnClick = (args) =>
         {
             Console.WriteLine("Element clicked " + c.Tag());
             g.Remove(c);
