--- a/src/SvgBlazor.Docs/Pages/Elements/Svg/SvgPage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Svg/SvgPage.razor
@@ -20,7 +20,7 @@
                 {
                     CenterX = new Random().Next(25, 475),
                     CenterY = new Random().Next(25, 475),
-                    Radius = new Random().Next(5, 40)
+                    Radius = new Random().Next(5, 40),
                 };
                 break;
             case 1:
@@ -29,7 +29,7 @@
                     X1 = new Random().Next(25, 475),
                     Y1 = new Random().Next(25, 475),
                     X2 = new Random().Next(25, 475),
-                    Y2 = new Random().Next(25, 475)
+                    Y2 = new Random().Next(25, 475),
                 };
                 break;
             default:
@@ -37,7 +37,7 @@
                 {
                     X = new Random().Next(25, 475),
                     Y = new Random().Next(25, 475),
-                    Text = "Test"
+                    Text = "Test",
                 };
                 break;
         }
