Add initial events system (#47)

--- a/src/SvgBlazor.Docs/Pages/Elements/Svg/SvgPage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Svg/SvgPage.razor
@@ -1,6 +1,6 @@
 ﻿@page "/elements/svg"
 
-<SvgComponent @ref="svgref" Width="500" Height="500" />
+<SvgComponent @ref="svgref" Width="500" Height="500" OnClick="OnSvgClicked" />
 
 <button @onclick="OnAddElement">Add random element</button>
 <p>Click an element to remove</p>
@@ -43,7 +43,19 @@
         }
 
         SvgContainer g = new SvgG();
+
+        c.OnClick = (args) =>
+        {
+            Console.WriteLine("Element clicked " + c.Tag());
+            g.Remove(c);
+        };
+
         g.Add(c);
         svgref.Add(g);
+    }
+
+    private void OnSvgClicked(MouseEventArgs args)
+    {
+        Console.WriteLine("Svg clicked");
     }
 }
