--- a/src/SvgBlazor.Docs/Pages/Elements/Svg/SvgPage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Svg/SvgPage.razor
@@ -44,11 +44,11 @@
 
         SvgContainer g = new SvgG();
 
-        c.OnClick = (args) =>
+        c.OnClick = EventCallback.Factory.Create<MouseEventArgs>(c, (args) =>
         {
             Console.WriteLine("Element clicked " + c.Tag());
             g.Remove(c);
-        };
+        });
 
         g.Add(c);
         svgref.Add(g);
