--- a/src/SvgBlazor.Docs/Shared/NavMenu.razor
+++ b/src/SvgBlazor.Docs/Shared/NavMenu.razor
@@ -60,6 +60,12 @@
                 <span class="oi oi-home" aria-hidden="true"></span> Text
             </NavLink>
         </li>
+
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="/layouts/verticallayout" Match="NavLinkMatch.All">
+                <span class="oi oi-home" aria-hidden="true"></span> Vertical Layout
+            </NavLink>
+        </li>
     </ul>
 </div>
 
