Remove unnecessary items

--- a/src/SvgBlazor.Docs/Pages/Elements/Svg/SvgPage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Svg/SvgPage.razor
@@ -42,7 +42,7 @@
                 break;
         }
 
-        SvgContainer g = new SvgGDraggable();
+        SvgContainer g = new SvgG();
 
         c.OnClick = EventCallback.Factory.Create<MouseEventArgs>(c, (args) =>
         {
