--- a/src/SvgBlazor.Docs/Pages/Attributes/Stroke/StrokePage.razor
+++ b/src/SvgBlazor.Docs/Pages/Attributes/Stroke/StrokePage.razor
@@ -1,65 +1,17 @@
 ﻿@page "/attributes/stroke"
 @using SvgBlazor.Docs.Components
 
-<div class="container">
-    <div class="row">
-        <div class="col">
-            <div class="container">
-                <div class="row">
-                    Basic example:
-                </div>
-                <div class="row">
-                    <ExampleComponent ExampleCode="@(new StrokeBasicExample())" />
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col">
-            <div class="container">
-                <div class="row">
-                    Dash array example:
-                </div>
-                <div class="row">
-                    <ExampleComponent ExampleCode="@(new StrokeDashArrayExample())" />
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col">
-            <div class="container">
-                <div class="row">
-                    Dash offset example:
-                </div>
-                <div class="row">
-                    <ExampleComponent ExampleCode="@(new StrokeDashOffsetExample())" />
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col">
-            <div class="container">
-                <div class="row">
-                    Stroke line cap example:
-                </div>
-                <div class="row">
-                    <ExampleComponent ExampleCode="@(new StrokeLineCapExample())" />
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col">
-            <div class="container">
-                <div class="row">
-                    Stroke opacity example:
-                </div>
-                <div class="row">
-                    <ExampleComponent ExampleCode="@(new StrokeOpacityExample())" />
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+<h4>Basic example:</h4>
+<div><ExampleComponent ExampleCode="@(new StrokeBasicExample())" /></div>
+
+<h4>Dash array example:</h4>
+<div><ExampleComponent ExampleCode="@(new StrokeDashArrayExample())" /></div>
+
+<h4>Dash offset example:</h4>
+<div><ExampleComponent ExampleCode="@(new StrokeDashOffsetExample())" /></div>
+
+<h4>Stroke line cap example:</h4>
+<div><ExampleComponent ExampleCode="@(new StrokeLineCapExample())" /></div>
+
+<h4>Stroke opacity example:</h4>
+<div><ExampleComponent ExampleCode="@(new StrokeOpacityExample())" /></div>
