--- a/src/SvgBlazor.Docs/Pages/Elements/Svg/SvgPage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Svg/SvgPage.razor
@@ -11,6 +11,8 @@
     private void OnAddElement()
     {
         SvgElement c;
+        var colors = new string[] { "red", "green", "blue", "yellow", "purple" };
+        var color = colors[new Random().Next(0, colors.Length)];
 
         var id = new Random().Next(0, 3);
         switch (id)
@@ -30,6 +32,7 @@
                     Y1 = new Random().Next(25, 475),
                     X2 = new Random().Next(25, 475),
                     Y2 = new Random().Next(25, 475),
+                    Stroke = new SvgStroke { Color = color },
                 };
                 break;
             default:
@@ -50,10 +53,10 @@
             g.Remove(c);
         });
 
-        var colors = new string[] {"red", "green", "blue", "yellow", "purple"};
+
         c.Fill = new SvgFill
         {
-            Color = colors[new Random().Next(0, colors.Length)],
+            Color = color,
             Opacity = (float)new Random().NextDouble()
         };
 
