--- a/src/SvgBlazor.Docs/Shared/NavMenu.razor
+++ b/src/SvgBlazor.Docs/Shared/NavMenu.razor
@@ -66,6 +66,12 @@
                 <span class="oi oi-home" aria-hidden="true"></span> Stroke
             </NavLink>
         </li>
+
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="/elements/path" Match="NavLinkMatch.All">
+                <span class="oi oi-home" aria-hidden="true"></span> Path
+            </NavLink>
+        </li>
     </ul>
 </div>
 
