Provide StrokeMiterLimit example when Path is implemented

--- a/src/SvgBlazor.Docs/Pages/Attributes/Stroke/StrokePage.razor
+++ b/src/SvgBlazor.Docs/Pages/Attributes/Stroke/StrokePage.razor
@@ -15,3 +15,13 @@
 
 <h4>Stroke opacity example:</h4>
 <div><ExampleComponent ExampleCode="@(new StrokeOpacityExample())" /></div>
+
+<h3>Stroke miter limit examples</h3>
+<h4>No miter limit</h4>
+<div><ExampleComponent ExampleCode="@(new StrokeMiterLimitExample())" /></div>
+
+<h4>Miter limit = 1:</h4>
+<div><ExampleComponent ExampleCode="@(new StrokeMiterLimitExample(1))" /></div>
+
+<h4>Miter limit = 2 example:</h4>
+<div><ExampleComponent ExampleCode="@(new StrokeMiterLimitExample(2))" /></div>
