--- a/src/SvgBlazor.Docs/Pages/Attributes/Stroke/StrokePage.razor
+++ b/src/SvgBlazor.Docs/Pages/Attributes/Stroke/StrokePage.razor
@@ -15,3 +15,13 @@
 
 <h4>Stroke opacity example:</h4>
 <div><ExampleComponent ExampleCode="@(new StrokeOpacityExample())" /></div>
+
+<h4>Stroke miter limit examples</h4>
+<h5>No miter limit</h5>
+<div><ExampleComponent ExampleCode="@(new StrokeMiterLimitExample())" /></div>
+
+<h5>Miter limit = 1:</h5>
+<div><ExampleComponent ExampleCode="@(new StrokeMiterLimitExample(1))" /></div>
+
+<h5>Miter limit = 2 example:</h5>
+<div><ExampleComponent ExampleCode="@(new StrokeMiterLimitExample(2))" /></div>
