--- a/src/SvgBlazor.Docs/Pages/Elements/Text/TextPage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Text/TextPage.razor
@@ -6,7 +6,7 @@
 <ExampleComponent Height="50" ExampleCode="@(new TextBasicExample())" />
 
 <h5>dx = 20, dy = 20</h5>
-<ExampleComponent Height="50" ExampleCode="@(new TextDxDyExample(20, 20))" />
+<ExampleComponent Height="50" ExampleCode="@(new TextShiftXYExample(20, 20))" />
 
 <h5>rotate: 20 0 20</h5>
 <ExampleComponent Height="50" ExampleCode="@(new TextRotateExample("20 0 20"))" />
