--- a/src/SvgBlazor.Docs/Pages/Elements/Text/TextPage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Text/TextPage.razor
@@ -5,7 +5,7 @@
 <h5>Basic</h5>
 <ExampleComponent Height="50" ExampleCode="@(new TextBasicExample())" />
 
-<h5>dx = 20, dy = 20</h5>
+<h5>ShiftX = 20, ShiftY = 20</h5>
 <ExampleComponent Height="50" ExampleCode="@(new TextShiftXYExample(20, 20))" />
 
 <h5>rotate: 20 0 20</h5>
