Provide rest of the text properties (#84)
Co-authored-by: Aro Wierzbowski <arowierzbowski@gmail.com>

--- a/src/SvgBlazor.Docs/Pages/Elements/Text/TextPage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Text/TextPage.razor
@@ -1,4 +1,18 @@
 ﻿@page "/elements/text"
 @using SvgBlazor.Docs.Components
 
-<ExampleComponent ExampleCode="@(new TextExample())" />
+<h4>Text examples:</h4>
+<h5>Basic</h5>
+<ExampleComponent Height="50" ExampleCode="@(new TextBasicExample())" />
+
+<h5>ShiftX = 20, ShiftY = 20</h5>
+<ExampleComponent Height="50" ExampleCode="@(new TextShiftXYExample(20, 20))" />
+
+<h5>rotate: 20 0 20</h5>
+<ExampleComponent Height="50" ExampleCode="@(new TextRotateExample("20 0 20"))" />
+
+<h5>TextLength: 100, lengthAdjust = spacing</h5>
+<ExampleComponent Height="50" ExampleCode="@(new TextLengthAdjustExample(TextLengthAdjust.Spacing, 100))" />
+
+<h5>TextLength: 100, lengthAdjust = spacingAndGlyphs</h5>
+<ExampleComponent Height="50" ExampleCode="@(new TextLengthAdjustExample(TextLengthAdjust.SpacingAndGlyphs, 100))" />
