Provide Stroke example for StrokeLineJoinStyle when Path is implemented

--- a/src/SvgBlazor.Docs/Pages/Attributes/Stroke/StrokePage.razor
+++ b/src/SvgBlazor.Docs/Pages/Attributes/Stroke/StrokePage.razor
@@ -27,6 +27,22 @@
 <h5>Round</h5>
 <div><ExampleComponent Height="20" ExampleCode="@(new StrokeLineCapExample(StrokeLineCapStyle.Round))" /></div>
 
+<h4>Stroke line join example:</h4>
+<h5>Miter</h5>
+<div><ExampleComponent ExampleCode="@(new StrokeLineJoinExample(StrokeLineJoinStyle.Miter))" /></div>
+
+<h5>Round</h5>
+<div><ExampleComponent ExampleCode="@(new StrokeLineJoinExample(StrokeLineJoinStyle.Round))" /></div>
+
+<h5>Bevel</h5>
+<div><ExampleComponent ExampleCode="@(new StrokeLineJoinExample(StrokeLineJoinStyle.Bevel))" /></div>
+
+<h5>Miter clip</h5>
+<div><ExampleComponent ExampleCode="@(new StrokeLineJoinExample(StrokeLineJoinStyle.MiterClip))" /></div>
+
+<h5>Arcs</h5>
+<div><ExampleComponent ExampleCode="@(new StrokeLineJoinExample(StrokeLineJoinStyle.Arcs))" /></div>
+
 <h4>Stroke opacity example:</h4>
 <div><ExampleComponent ExampleCode="@(new StrokeOpacityExample())" /></div>
 
