--- a/src/SvgBlazor.Docs/Pages/Elements/Svg/SvgPage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Svg/SvgPage.razor
@@ -44,10 +44,10 @@
 
         SvgContainer g = new SvgG();
 
-        c.OnClick = EventCallback.Factory.Create<MouseEventArgs>(c, (args) =>
+        c.OnClick = EventCallback.Factory.Create<MouseEventArgs>(c,async (args) =>
         {
             Console.WriteLine("Element clicked " + c.Tag());
-            g.Remove(c);
+            Console.WriteLine("Element clicked " + await c.BoundingRect2());
         });
 
         var colors = new string[] { "red", "green", "blue", "yellow", "purple" };
