--- a/src/SvgBlazor.Docs/Pages/Elements/Svg/SvgPage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Svg/SvgPage.razor
@@ -48,6 +48,8 @@
         {
             Console.WriteLine("Element clicked " + c.Tag());
             Console.WriteLine("Element clicked " + await c.BoundingRect2());
+            Console.WriteLine("Element clicked " + await g.BoundingRect2());
+
         });
 
         var colors = new string[] { "red", "green", "blue", "yellow", "purple" };
