--- a/src/SvgBlazor.Docs/Pages/Elements/Svg/SvgPage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Svg/SvgPage.razor
@@ -47,8 +47,8 @@
         c.OnClick = EventCallback.Factory.Create<MouseEventArgs>(c,async (args) =>
         {
             Console.WriteLine("Element clicked " + c.Tag());
-            Console.WriteLine("Element clicked " + await c.BoundingRect2());
-            Console.WriteLine("Element clicked " + await g.BoundingRect2());
+            Console.WriteLine("Element clicked " + await c.GetBoundingBox());
+            Console.WriteLine("Element clicked " + await g.GetBoundingBox());
 
         });
 
