--- a/src/SvgBlazor.Docs/Pages/Elements/Svg/SvgPage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Svg/SvgPage.razor
@@ -44,12 +44,11 @@
 
         SvgContainer g = new SvgG();
 
-        c.OnClick = EventCallback.Factory.Create<MouseEventArgs>(c,async (args) =>
+        c.OnClick = EventCallback.Factory.Create<MouseEventArgs>(c, async (args) =>
         {
-            Console.WriteLine("Element clicked " + c.Tag());
-            Console.WriteLine("Element clicked " + await svgref.GetBoundingBox(g));
-            Console.WriteLine("Element clicked " + await svgref.GetBoundingBox(c));
-
+            Console.WriteLine("Element clicked: " + c.Tag());
+            Console.WriteLine("Svg container (g) bounding box: " + await svgref.GetBoundingBox(g));
+            Console.WriteLine("Element bounding box: " + await svgref.GetBoundingBox(c));
         });
 
         var colors = new string[] { "red", "green", "blue", "yellow", "purple" };
