--- a/src/SvgBlazor.Docs/Components/ExampleCode.razor
+++ b/src/SvgBlazor.Docs/Components/ExampleCode.razor
@@ -10,7 +10,11 @@
 
     protected override void OnInitialized()
     {
-        var resourceName = typeof(ExampleCode).Assembly.GetManifestResourceNames().FirstOrDefault(x => x.Contains($"{ItemName}Example.html"));
+        var resourceName = typeof(ExampleCode)
+            .Assembly
+            .GetManifestResourceNames()
+            .FirstOrDefault(x => x.Contains($"{ItemName}Example.html"));
+
         if (resourceName is null)
         {
             codeMarkup = "<p>No code</p>";
