--- a/src/SvgBlazor.Docs/Components/ExampleComponent.razor
+++ b/src/SvgBlazor.Docs/Components/ExampleComponent.razor
@@ -25,8 +25,5 @@
         }
     }
 
-    protected string GetItemName()
-    {
-        return ExampleCode.GetType().Name;
-    }
+    private string GetItemName() => ExampleCode?.GetType().Name;
 }
