--- a/src/SvgBlazor.Docs/Pages/Elements/Circle/CirclePage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Circle/CirclePage.razor
@@ -1,4 +1,5 @@
 ﻿@page "/elements/circle"
 @using SvgBlazor.Docs.Components
 
+<ExampleCodeTitle>Circle</ExampleCodeTitle>
 <ExampleComponent ExampleCode="@(new CircleExample())" />
