--- a/src/SvgBlazor.Docs/Pages/Attributes/Stroke/StrokePage.razor
+++ b/src/SvgBlazor.Docs/Pages/Attributes/Stroke/StrokePage.razor
@@ -1,6 +1,7 @@
 ﻿@page "/attributes/stroke"
 @using SvgBlazor.Docs.Components
 
+<ExampleTitle>Stroke</ExampleTitle>
 <h4>Basic example:</h4>
 <div><ExampleComponent ExampleCode="@(new StrokeBasicExample())" /></div>
 
