--- a/src/SvgBlazor.Docs/Pages/Elements/Ellipse/EllipsePage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Ellipse/EllipsePage.razor
@@ -1,4 +1,5 @@
 ﻿@page "/elements/ellipse"
 @using SvgBlazor.Docs.Components
 
+<ExampleTitle>Ellipse</ExampleTitle>
 <ExampleComponent ExampleCode="@(new EllipseExample())" />
