--- a/src/SvgBlazor.Docs/Pages/Elements/G/GPage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/G/GPage.razor
@@ -1,4 +1,5 @@
 ﻿@page "/elements/g"
 @using SvgBlazor.Docs.Components
 
+<ExampleTitle>G</ExampleTitle>
 <ExampleComponent ExampleCode="@(new GExample())" />
