--- a/src/SvgBlazor.Docs/Pages/Elements/Line/LinePage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Line/LinePage.razor
@@ -1,4 +1,5 @@
 ﻿@page "/elements/line"
 @using SvgBlazor.Docs.Components
 
+<ExampleTitle>Line</ExampleTitle>
 <ExampleComponent ExampleCode="@(new LineExample())" />
