--- a/src/SvgBlazor.Docs/Pages/Elements/Path/PathPage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Path/PathPage.razor
@@ -1,4 +1,5 @@
 ﻿@page "/elements/path"
 @using SvgBlazor.Docs.Components
 
+<ExampleTitle>Path</ExampleTitle>
 <ExampleComponent ExampleCode="@(new PathExample())" />
