--- a/src/SvgBlazor.Docs/Pages/Elements/Polygon/PolygonPage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Polygon/PolygonPage.razor
@@ -1,4 +1,5 @@
 ﻿@page "/elements/polygon"
 @using SvgBlazor.Docs.Components
 
+<ExampleTitle>Polygon</ExampleTitle>
 <ExampleComponent ExampleCode="@(new PolygonExample())" />
