--- a/src/SvgBlazor.Docs/Pages/Elements/Rect/RectPage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Rect/RectPage.razor
@@ -1,4 +1,5 @@
 ﻿@page "/elements/rect"
 @using SvgBlazor.Docs.Components
 
+<ExampleTitle>Rect</ExampleTitle>
 <ExampleComponent ExampleCode="@(new RectExample())" />
