--- a/src/SvgBlazor.Docs/Pages/Elements/Svg/SvgPage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Svg/SvgPage.razor
@@ -1,5 +1,7 @@
 ﻿@page "/elements/svg"
+@using SvgBlazor.Docs.Components
 
+<ExampleTitle>Svg</ExampleTitle>
 <SvgComponent @ref="svgref" Width="500" Height="500" OnClick="OnSvgClicked" />
 
 <button @onclick="OnAddElement">Add random element</button>
