--- a/src/SvgBlazor.Docs/Pages/Elements/Text/TextPage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Text/TextPage.razor
@@ -1,6 +1,7 @@
 ﻿@page "/elements/text"
 @using SvgBlazor.Docs.Components
 
+<ExampleTitle>Text</ExampleTitle>
 <h4>Text examples:</h4>
 <h5>Basic</h5>
 <ExampleComponent Height="50" ExampleCode="@(new TextBasicExample())" />
