Add component to docs which shows title of the elements (#95)
Co-authored-by: Aro Wierzbowski <arowierzbowski@gmail.com>

--- a/src/SvgBlazor.Docs/Pages/Elements/Circle/CirclePage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Circle/CirclePage.razor
@@ -1,4 +1,5 @@
 ﻿@page "/elements/circle"
 @using SvgBlazor.Docs.Components
 
+<ExampleTitle>Circle</ExampleTitle>
 <ExampleComponent ExampleCode="@(new CircleExample())" />
