--- a/src/SvgBlazor.Docs/Pages/Elements/Ellipse/EllipsePage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Ellipse/EllipsePage.razor
@@ -3,3 +3,4 @@
 
 <ExampleTitle>Ellipse</ExampleTitle>
 <ExampleComponent ExampleCode="@(new EllipseExample())" />
+<ElementApiDocs ElementType="@typeof(SvgEllipse)" />
