--- a/src/SvgBlazor.Docs/Pages/Elements/Ellipse/EllipsePage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Ellipse/EllipsePage.razor
@@ -10,5 +10,7 @@
     protected override void OnInitialized()
     {
         ReflectionTypesExtensions.LoadXmlDocumentation(typeof(EllipseExample).Assembly);
+
+        Console.WriteLine("doc: " + typeof(SvgEllipse).GetDocumentation());
     }
 }
