--- a/src/SvgBlazor.Docs/Pages/Attributes/Stroke/StrokePage.razor
+++ b/src/SvgBlazor.Docs/Pages/Attributes/Stroke/StrokePage.razor
@@ -56,3 +56,5 @@
 
 <h5>Miter limit = 2 example:</h5>
 <div><ExampleComponent ExampleCode="@(new StrokeMiterLimitExample(2))" /></div>
+
+<ElementApiDocs ElementType="@typeof(SvgStroke)" />
