--- a/src/SvgBlazor.Docs/Pages/Elements/G/GPage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/G/GPage.razor
@@ -3,3 +3,4 @@
 
 <ExampleTitle>G</ExampleTitle>
 <ExampleComponent ExampleCode="@(new GExample())" />
+<ElementApiDocs ElementType="@typeof(SvgG)" />
