--- a/src/SvgBlazor.Docs/Pages/Elements/Line/LinePage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Line/LinePage.razor
@@ -3,3 +3,4 @@
 
 <ExampleTitle>Line</ExampleTitle>
 <ExampleComponent ExampleCode="@(new LineExample())" />
+<ElementApiDocs ElementType="@typeof(SvgLine)" />
