--- a/src/SvgBlazor.Docs/Pages/Elements/Path/PathPage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Path/PathPage.razor
@@ -3,3 +3,4 @@
 
 <ExampleTitle>Path</ExampleTitle>
 <ExampleComponent ExampleCode="@(new PathExample())" />
+<ElementApiDocs ElementType="@typeof(SvgBlazor.Elements.SvgPath)" />
