--- a/src/SvgBlazor.Docs/Pages/Elements/Polygon/PolygonPage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Polygon/PolygonPage.razor
@@ -3,3 +3,4 @@
 
 <ExampleTitle>Polygon</ExampleTitle>
 <ExampleComponent ExampleCode="@(new PolygonExample())" />
+<ElementApiDocs ElementType="@typeof(SvgPolygon)" />
