--- a/src/SvgBlazor.Docs/Pages/Elements/Rect/RectPage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Rect/RectPage.razor
@@ -3,3 +3,4 @@
 
 <ExampleTitle>Rect</ExampleTitle>
 <ExampleComponent ExampleCode="@(new RectExample())" />
+<ElementApiDocs ElementType="@typeof(SvgRect)" />
