--- a/src/SvgBlazor.Docs/Pages/Elements/Svg/SvgPage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Svg/SvgPage.razor
@@ -3,6 +3,7 @@
 
 <ExampleTitle>Svg</ExampleTitle>
 <SvgComponent @ref="svgref" Width="500" Height="500" OnClick="OnSvgClicked" />
+<ElementApiDocs ElementType="@typeof(Svg)" />
 
 <button @onclick="OnAddElement">Add random element</button>
 <p>Click an element to remove</p>
