--- a/src/SvgBlazor.Docs/Pages/Elements/Text/TextPage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Text/TextPage.razor
@@ -17,3 +17,5 @@
 
 <h5>TextLength: 100, lengthAdjust = spacingAndGlyphs</h5>
 <ExampleComponent Height="50" ExampleCode="@(new TextLengthAdjustExample(TextLengthAdjust.SpacingAndGlyphs, 100))" />
+
+<ElementApiDocs ElementType="@typeof(SvgText)" />
