--- a/src/SvgBlazor.Docs/Pages/Elements/Circle/CirclePage.razor
+++ b/src/SvgBlazor.Docs/Pages/Elements/Circle/CirclePage.razor
@@ -1,7 +1,7 @@
 ﻿@page "/elements/circle"
 @using SvgBlazor.Docs.Components
 
-<ExampleTitle>SvgCircle</ExampleTitle>
+<ExampleTitle>Circle</ExampleTitle>
 <p>The SvgCircle class is responsible for providing the svg @("<circle>") element.</p>
 <ExampleComponent Width=100 Height=100 ExampleCode="@(new CircleExample())" />
 <p>Used parameters:</p>
@@ -11,3 +11,4 @@
     <li>Radius - the radius of the circle</li>
     <li>Fill - the fill color of the circle</li>
 </ul>
+<ElementApiDocs ElementType="@typeof(SvgCircle)" />
